--- a/supported/configs/onboarding_scripts.yaml
+++ b/supported/configs/onboarding_scripts.yaml
@@ -8,7 +8,7 @@ parameters:
     type: boolean
     label: Allow Usage Analytics
     description: Toggles whether non-identifiable statistical information is sent to F5.
-    default: True
+    default: true
   ua_template_name:
     type: string
     label: Template Name (Usage Analytics)
@@ -77,10 +77,10 @@ parameters:
     type: string
     label: Host Name
     description: BIG-IP Host Name
-  management_ip:
+  management_port_id:
     type: string
-    label: Management IP
-    description: BIG-IP Management IP address
+    label: Management Port ID
+    description: Neutron Port ID of the BIG-IP Management NIC
   management_port:
     type: number
     label: Management Port
@@ -104,47 +104,51 @@ resources:
     properties:
       cloud_config:
         write_files:
-        - path: /config/verifyHash
-          permissions: 0755
-          owner: root:root
-          content: { get_file: ../scripts/verifyHash }
-        - path: /config/preOnboard.sh
-          permissions: 0755
-          owner: root:root
-          content:
-            str_replace:
-              params:
+          - path: /config/cloud/openstack/bigIqPwd
+            permissions: 0755
+            owner: root:root
+            content: { get_param: bigiq_license_pwd }
+          - path: /config/verifyHash
+            permissions: 0755
+            owner: root:root
+            content: { get_file: ../scripts/verifyHash }
+          - path: /config/preOnboard.sh
+            permissions: 0755
+            owner: root:root
+            content:
+              str_replace:
+                params:
                   __ssh_key_name__: { get_param: ssh_key_name }
                   __use_config_drive__: { get_param: use_config_drive }
                   __verify_hash_override__: { get_param: verify_hash_url_override }
                   wc_notify: { get_param: wait_handle_curl}
-              template: { get_file: ../scripts/preOnboard.sh }
-        - path: /config/wait_cloudlibs_install.sh
-          permissions: 0755
-          owner: root:root
-          content: { get_file: ../scripts/wait_cloudlibs_install.sh }
-        - path: /config/postOnboard.sh
-          permissions: 0755
-          owner: root:root
-          content:
-            str_replace:
-              params:
+                template: { get_file: ../scripts/preOnboard.sh }
+          - path: /config/wait_cloudlibs_install.sh
+            permissions: 0755
+            owner: root:root
+            content: { get_file: ../scripts/wait_cloudlibs_install.sh }
+          - path: /config/postOnboard.sh
+            permissions: 0755
+            owner: root:root
+            content:
+              str_replace:
+                params:
                   wc_notify: { get_param: wait_handle_curl}
-              template: { get_file: ../scripts/postOnboard.sh }
-        - path: /config/onboard.sh
-          permissions: 0755
-          owner: root:root
-          content:
-            str_replace:
-              params:
+                template: { get_file: ../scripts/postOnboard.sh }
+          - path: /config/onboard.sh
+            permissions: 0755
+            owner: root:root
+            content:
+              str_replace:
+                params:
                   __license__: { get_param: bigip_license }
                   __host_name__: { get_param: host_name }
-                  __mgmt_ip__: { get_param: management_ip }
+                  __mgmt_port_id__: { get_param: management_port_id }
                   __mgmt_port__: { get_param: management_port }
                   __add_on_licenses__:
                     list_join:
                       - ' '
-                      - 
+                      -
                         repeat:
                           template: --add-on "addon"
                           for_each:
@@ -152,7 +156,7 @@ resources:
                   __dns__:
                     list_join:
                       - ' '
-                      - 
+                      -
                         repeat:
                           template: --dns server_dns
                           for_each:
@@ -160,7 +164,7 @@ resources:
                   __modules__:
                     list_join:
                       - ' '
-                      - 
+                      -
                         repeat:
                           template: --module bigip_module
                           for_each:
@@ -168,7 +172,7 @@ resources:
                   __ntp__:
                     list_join:
                       - ' '
-                      - 
+                      -
                         repeat:
                           template: --ntp server_ntp
                           for_each:
@@ -182,7 +186,7 @@ resources:
                   __region__: { get_param: ua_region }
                   __license_type__: { get_param: ua_license_type }
                   wc_notify: { get_param: wait_handle_curl }
-              template: { get_file: ../scripts/onboard.sh }
+                template: { get_file: ../scripts/onboard.sh }
 
 outputs:
   OS::stack_id:
