--- a/experimental/templates/solutions/autoscale/ltm/f5_bigip_autoscale_ltm_instance_2_nic.yaml
+++ b/experimental/templates/solutions/autoscale/ltm/f5_bigip_autoscale_ltm_instance_2_nic.yaml
@@ -1,6 +1,8 @@
 heat_template_version: 2016-04-08
 
-description: This template deploys a standard f5 BIG-IP VE - 2NIC ready for clustering. The HA self-ip is configured on the data VLAN.
+
+description: This template deploys a standard f5 BIG-IP VE - 2NIC in an autoscale group. The HA self-ip is configured on the data VLAN.
+
 
 parameters:
   bigip_image:
@@ -88,7 +90,7 @@ parameters:
     type: string
     label: f5 BIG-IQ Password
     description: The BIG-IQ password to use to license the BIG-IP instances.
-    hidden: True
+    hidden: true
   bigiq_license_pool:
     type: string
     label: f5 BIG-IQ License Pool Name
@@ -214,7 +216,7 @@ parameters:
     type: string
     label: Openstack Password
     description: Password for openstack account that can perform stack operations
-    hidden: True
+    hidden: true
   os_region:
     type: string
     label: Openstack Region
@@ -240,7 +242,7 @@ parameters:
     type: boolean
     label: Allow Usage Analytics
     description: Toggles whether non-identifiable statistical information is sent to F5.
-    default: True
+    default: true
   ua_template_name:
     type: string
     label: Template Name (Usage Analytics)
@@ -271,55 +273,58 @@ parameters:
     label: Stack Id (Usage Analytics)
     description: Stack Id or Name
     default: None
+
+
 parameter_groups:
   - label: BIG-IP General Provisioning
     parameters:
-    - bigip_image
-    - bigip_flavor
-    - use_config_drive
-    - f5_cloudlibs_tag
-    - f5_cloudlibs_url_override
-    - f5_cloudlibs_verify_hash_url_override
-    - bigip_servers_ntp
-    - bigip_servers_dns
+      - bigip_image
+      - bigip_flavor
+      - use_config_drive
+      - f5_cloudlibs_tag
+      - f5_cloudlibs_url_override
+      - f5_cloudlibs_verify_hash_url_override
+      - bigip_servers_ntp
+      - bigip_servers_dns
   - label: BIG-IP Credentials
     parameters:
-    - bigip_os_ssh_key
-    - bigip_admin_pwd
-    - bigip_root_pwd
+      - bigip_os_ssh_key
+      - bigip_admin_pwd
+      - bigip_root_pwd
   - label: BIG-IP Licensing and Modules
     parameters:
-    - bigip_modules
+      - bigip_modules
   - label: OS Network
     parameters:
-    - external_network
-    - mgmt_network
-    - mgmt_security_group_id
-    - network_vlan_security_group_id
-    - network_vlan_name
-    - network_vlan_subnet
+      - external_network
+      - mgmt_network
+      - mgmt_security_group_id
+      - network_vlan_security_group_id
+      - network_vlan_name
+      - network_vlan_subnet
   - label: BIG-IP Network
     parameters:
-    - bigip_default_gateway
-    - bigip_mgmt_port
-    - bigip_vlan_name
-    - bigip_vlan_mtu
-    - bigip_vlan_tag
-    - bigip_vlan_nic
-    - bigip_self_cidr_block
-    - bigip_self_port_lockdown
+      - bigip_default_gateway
+      - bigip_mgmt_port
+      - bigip_vlan_name
+      - bigip_vlan_mtu
+      - bigip_vlan_tag
+      - bigip_vlan_nic
+      - bigip_self_cidr_block
+      - bigip_self_port_lockdown
   - label: BIG-IP Autoscale
     parameters:
-    - bigip_device_group
+      - bigip_device_group
   - label: Usage Analytics
     parameters:
-    - ua_allow
-    - ua_cloudlibs_tag
-    - ua_project_id
-    - ua_stack_id
-    - ua_template_name
-    - ua_template_version
-    - ua_region
+      - ua_allow
+      - ua_cloudlibs_tag
+      - ua_project_id
+      - ua_stack_id
+      - ua_template_name
+      - ua_template_version
+      - ua_region
+
 
 resources:
   wait_condition_onboard_complete:
@@ -362,6 +367,8 @@ resources:
       network: { get_param: network_vlan_name }
       security_groups: [{get_param: network_vlan_security_group_id}]
       admin_state_up: true
+      allowed_address_pairs:
+        - ip_address: 0.0.0.0/0
       fixed_ips:
         - subnet: { get_param: network_vlan_subnet }
         - subnet: { get_param: network_vlan_subnet}
@@ -392,14 +399,14 @@ resources:
       ntp: { get_param: bigip_servers_ntp }
       dns: { get_param: bigip_servers_dns }
       host_name: { get_attr: [ mgmt_port, show, dns_assignment, 0, fqdn] }
-      management_ip: { get_attr: [ mgmt_port, fixed_ips, 0, ip_address] }
+      management_port_id: { get_resource: mgmt_port }
       management_port: { get_param: bigip_mgmt_port }
       ssh_key_name: { get_param: bigip_os_ssh_key }
       use_config_drive: { get_param: use_config_drive }
       wait_handle_curl: { get_attr: [wait_handle_onboard, curl_cli] }
-      keep_admin: True
-      keep_config_drive: True
-      keep_bigiq: True
+      keep_admin: true
+      keep_config_drive: true
+      keep_bigiq: true
       ua_allow: { get_param: ua_allow }
       ua_template_name: { get_param: ua_template_name }
       ua_template_version: { get_param: ua_template_version }
@@ -419,9 +426,9 @@ resources:
       self_ip_addr: { get_attr: [network_vlan_port, fixed_ips, 0, ip_address] }
       self_cidr_block: { get_param: bigip_self_cidr_block }
       self_port_lockdown:
-          - tcp:4353
-          - udp:1026
-          - tcp:443
+        - tcp:4353
+        - udp:1026
+        - tcp:443
       default_gateway: { get_param: bigip_default_gateway }
       wait_handle_curl: { get_attr: [wait_handle_onboard_network, curl_cli]}
   init_4_2_onboard_network_config:
@@ -482,13 +489,13 @@ resources:
     type: OS::Heat::MultipartMime
     properties:
       parts:
-      - config: {get_resource: init_1_override_default_config}
-      - config: {get_resource: init_2_onboard_libs}
-      - config: {get_resource: init_3_onboard_scripts}
-      - config: {get_resource: init_4_1_onboard_network_config}
-      - config: {get_resource: init_4_2_onboard_network_config}
-      - config: {get_resource: init_5_onboard_autoscale_config}
-      - config: {get_resource: init_6_run_commands}
+        - config: {get_resource: init_1_override_default_config}
+        - config: {get_resource: init_2_onboard_libs}
+        - config: {get_resource: init_3_onboard_scripts}
+        - config: {get_resource: init_4_1_onboard_network_config}
+        - config: {get_resource: init_4_2_onboard_network_config}
+        - config: {get_resource: init_5_onboard_autoscale_config}
+        - config: {get_resource: init_6_run_commands}
   bigip_instance:
     type: OS::Nova::Server
     properties:
@@ -507,8 +514,11 @@ resources:
         management_ip: { get_attr: [ mgmt_port, fixed_ips, 0, ip_address] }
         config_sync_ip: { get_attr: [network_vlan_port, fixed_ips, 0, ip_address] }
         host_name: { get_attr: [ mgmt_port, show, dns_assignment, 0, fqdn] }
+
+
 outputs:
   resourceid:
+    description: Resource ID of the instance stack
     value: { get_param: "OS::stack_id" }
   bigip_instance_id:
     description: ID of the BIG-IP instance
@@ -517,11 +527,17 @@ outputs:
     description: Name of the BIG-IP instance
     value: { get_attr: [bigip_instance, name] }
   bigip_instance_networks:
-    description: Management IP of the BIG-IP instance
+    description: Network info for the BIG-IP instance
     value: { get_attr: [bigip_instance, networks]}
   bigip_instance_addresses:
     description: Cluster and Data SelfIPs of the BIG-IP instance
     value: { get_attr: [bigip_instance, addresses]}
   bigip_instance_floating_ip:
-    description: Management Floating IP of the BIG-IP Instance
+    description: Management Floating IP of the BIG-IP instance
     value: { get_attr: [floating_ip, floating_ip_address] }
+  bigip_instance_mgmt_port_id:
+    description: Management Neutron Port ID of the BIG-IP instance
+    value: { get_resource: mgmt_port }
+  bigip_instance_network_vlan_port_id:
+    description: Network Vlan Neutron Port ID of the BIG-IP instance
+    value: { get_resource: network_vlan_port }
