--- a/supported/templates/standalone/1nic/f5_bigip_standalone_1_nic.yaml
+++ b/supported/templates/standalone/1nic/f5_bigip_standalone_1_nic.yaml
@@ -62,7 +62,7 @@ parameters:
     type: boolean
     label: Allow Usage Analytics
     description: Toggles whether non-identifiable statistical information is sent to F5.
-    default: True
+    default: true
   #bigip credentials
   bigip_os_ssh_key:
     type: string
@@ -125,35 +125,35 @@ parameters:
 parameter_groups:
   - label: BIG-IP General Provisioning
     parameters:
-    - bigip_image
-    - bigip_flavor
-    - use_config_drive
-    - f5_cloudlibs_tag
-    - f5_cloudlibs_url_override
-    - f5_cloudlibs_verify_hash_url_override
-    - f5_cloudlibs_openstack_tag
-    - f5_cloudlibs_openstack_url_override
-    - bigip_servers_ntp
-    - bigip_servers_dns
-    - allow_usage_analytics
+      - bigip_image
+      - bigip_flavor
+      - use_config_drive
+      - f5_cloudlibs_tag
+      - f5_cloudlibs_url_override
+      - f5_cloudlibs_verify_hash_url_override
+      - f5_cloudlibs_openstack_tag
+      - f5_cloudlibs_openstack_url_override
+      - bigip_servers_ntp
+      - bigip_servers_dns
+      - allow_usage_analytics
   - label: BIG-IP Credentials
     parameters:
-    - bigip_os_ssh_key
-    - bigip_admin_pwd
-    - bigip_root_pwd
+      - bigip_os_ssh_key
+      - bigip_admin_pwd
+      - bigip_root_pwd
   - label: BIG-IP Licensing and Modules
     parameters:
-    - bigip_license_key
-    - bigip_addon_license_keys
-    - bigip_modules
+      - bigip_license_key
+      - bigip_addon_license_keys
+      - bigip_modules
   - label: OS Network
     parameters:
-    - external_network
-    - mgmt_network
-    - mgmt_security_group_name
+      - external_network
+      - mgmt_network
+      - mgmt_security_group_name
   - label: BIG-IP Network
     parameters:
-    - bigip_mgmt_port
+      - bigip_mgmt_port
 
 resources:
   wait_condition_onboard_complete:
@@ -201,7 +201,7 @@ resources:
       ntp: { get_param: bigip_servers_ntp }
       dns: { get_param: bigip_servers_dns }
       host_name: { get_attr: [mgmt_port, show, dns_assignment, 0, fqdn] }
-      management_ip: { get_attr: [mgmt_port, fixed_ips, 0, ip_address] }
+      management_port_id: { get_resource: mgmt_port }
       management_port: { get_param: bigip_mgmt_port }
       ssh_key_name: { get_param: bigip_os_ssh_key }
       use_config_drive: { get_param: use_config_drive }
@@ -225,10 +225,10 @@ resources:
     type: OS::Heat::MultipartMime
     properties:
       parts:
-      - config: {get_resource: init_1_override_default_config}
-      - config: {get_resource: init_2_onboard_libs}
-      - config: {get_resource: init_3_onboard_scripts}
-      - config: {get_resource: init_4_run_commands}
+        - config: {get_resource: init_1_override_default_config}
+        - config: {get_resource: init_2_onboard_libs}
+        - config: {get_resource: init_3_onboard_scripts}
+        - config: {get_resource: init_4_run_commands}
   bigip_instance:
     type: OS::Nova::Server
     properties:
